<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fox\'s Magisk Module Manager</string>
    <string name="app_name_v2">Androidacy Module Manager</string>
    <string name="app_name_short_v2">AMM</string>
    <string name="fail_root_magisk">Could not access either Root or Magisk</string>
    <string name="fail_root_denied">Root has been denied via the Magisk app</string>
    <string name="fail_magisk_missing">Magisk is not installed on this device</string>
    <string name="loading">Loading…</string>
    <string name="updatable">Upgradable</string>
    <string name="installed">Installed</string>
    <string name="online_repo">Online Repo</string>
    <string name="showcase_mode">The app is in lockdown mode</string>
    <string name="failed_download">Could not download the file</string>
    <string name="fail_internet">Could not connect to the Internet</string>
    <string name="no_web_view">Could not open system WebView</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="app_update_available">A new version of the app is available</string>
    <string name="no_desc_found">No description found.</string>
    <string name="download_module">Download module</string>
    <string name="install_module">Install module</string>
    <string name="update_module">Upgrade module</string>
    <string name="website">Website</string>
    <string name="support">Support</string>
    <string name="donate">Donate</string>
    <string name="update">Update</string>
    <string name="install">Install</string>
    <string name="description">Description</string>
    <string name="uninstall">Uninstall</string>
    <string name="config">Config</string>
    <string name="report_bugs">Report bugs</string>
    <string name="submit_modules">Submit a module</string>
    <string name="require_android_12">Requires Android 12+</string>
    <string name="install_terminal_reboot_now">Reboot</string>
    <string name="language">Language</string>
    <string name="yes" translatable="false">@android:string/yes</string>
    <string name="no" translatable="false">@android:string/no</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="module_last_update">Last update:</string>
    <string name="module_repo">Repo:</string>
    <string name="module_by">by</string>
    <string name="module_downloads">Downloads:</string>
    <string name="module_stars">Stars:</string>
    <string name="module_needs_ramdisk">Needs ramdisk</string>
    <string name="module_needs_ramdisk_desc">This module need boot ramdisk to be installed</string>
    <string name="module_can_change_boot">Can change boot</string>
    <string name="module_can_change_boot_desc">This module may change the boot image</string>
    <string name="module_min_magisk_chip">Min. Magisk "%s"</string>
    <string name="module_min_sdk_chip">Min. Android</string>
    <string name="module_max_sdk_chip">Max. Android</string>
    <string name="manage_repos_pref">Manage repos</string>
    <string name="showcase_mode_pref">Lockdown mode</string>
    <string name="showcase_mode_desc">Lockdown mode prevents the manager from carrying out actions on modules</string>
    <string name="prevent_reboot_pref">Prevent reboot</string>
    <string name="prevent_reboot_desc">Prevents unexpected reboots</string>
    <string name="enable_monet">Enable Monet</string>
    <string name="pref_category_info">Info</string>
    <string name="show_licenses">Show licenses</string>
    <string name="show_incompatible_pref">Show incompatible modules</string>
    <string name="show_incompatible_desc">Show modules unlikely to work on your device based on their metadata</string>
    <string name="magisk_outdated">There is a new version of Magisk to install!</string>
    <string name="pref_category_security">Security</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="master_delete">Delete the module files?</string>
    <string name="master_delete_no">Keep</string>
    <string name="master_delete_yes">Delete</string>
    <string name="master_delete_fail">Could not delete the module files</string>
    <string name="theme_pref">Theme</string>
    <string name="module_id_prefix">Module ID: </string>
    <string name="install_from_storage">Install module from storage</string>
    <string name="invalid_format">The selected module has an invalid format</string>
    <string name="low_quality_module">Low-quality module</string>
    <string name="local_install_title">Local install</string>
    <string name="source_code">Source code</string>
    <string name="magisk_builtin_module">Magisk built-in module</string>
    <string name="substratum_builtin_module">Substratum built-in module</string>
    <string name="force_dark_terminal_title">Dark terminal</string>
    <string name="file_picker_failure">Your current file picker could not access the file.</string>
    <string name="remote_install_title">Remote install</string>
    <string name="file_picker_wierd">Your file picker returned a non-standard response.</string>
    <string name="use_magisk_install_command_pref" tools:ignore="TypographyDashes">Use the \"magisk --install-module\" command</string>
    <string name="use_magisk_install_command_desc">
        During testing it caused problems to the module install error diagnosis tool,
        so this option behind is hidden behind developer mode.\nTurn this on at your own risk!
    </string>
    <string name="dev_mode_enabled">Developer mode on</string>
    <string name="dev_mode_disabled">Developer mode off</string>
    <string name="disable_low_quality_module_filter_pref">Show low-quality modules</string>
    <string name="disable_low_quality_module_filter_desc">
        Some modules do not declare their metadata properly, causing visual glitches,
        and/or indicating poor module quality.\nTurn this on at your own risk!
    </string>
    <string name="dns_over_https_pref">DNS over HTTPS</string>
    <string name="dns_over_https_desc">
        May fix connections issues in some cases.
        (Does not apply to WebView.)
    </string>
    <string name="wrap_text_pref">Text wrapping</string>
    <string name="wrap_text_desc">
        Show text on multiple lines instead of putting
        all text on the same line when installing a module.
    </string>
    <string name="enable_blur_pref">Blur</string>
    <string name="repo_enabled">Repo on</string>
    <string name="repo_disabled">Repo off</string>
    <string name="add_repo">Add Repo</string>
    <string name="remove_repo">Remove Repo</string>
    <string name="custom_url">Custom url</string>
    <string name="link_copied">Link copied</string>
    <string name="androidacy_repo_info">This repository may display some non-intrusive advertising to cover server and development costs. Features reviews, automatic virus scans, and more.</string>
    <string name="androidacy_test_mode_pref">Androidacy test mode</string>
    <string name="notification_update_pref">Automatic modules update check</string>
    <string name="notification_update_desc">May increase battery usage</string>
    <string name="notification_update_debug_pref">Test Notification</string>
    <string name="crash_reporting">Automatically report bugs and performance to the developers</string>
    <string name="crash_reporting_desc">If you disable this, the developer will not get automatic bug reports, and this may make troubleshooting harder</string>
    <string name="crash">Crash the app for testing</string>
    <string name="clear_app_data">Clear app data</string>
    <string name="language_cta">Don\'t see your language?</string>
    <string name="language_cta_desc">Help us by translating it! Tap here to find out more.</string>
    <string name="androidacy_thanks">Developed in part by Androidacy</string>
    <string name="androidacy_thanks_desc">Huge shoutout to Androidacy for their integration and contributions to the app.</string>
    <string name="contributors">And of course, thanks to all of our contributors, whether it\'s translations, code, or just being fun to hang out with! We love you all.</string>
    <string name="action_settings">Settings</string>
    <string name="pref_category_contributors">Contributors</string>
    <string name="fox2code_thanks_desc">Fox2Code is the original creator of the app. Without him, this would have never been possible.</string>
    <string name="fox2code_thanks">Created by Fox2Code</string>
    <string name="save_logs">Save logs to storage and share</string>
    <string name="notification_update_ignore_desc">List of modules to exclude from update checks</string>
    <string name="notification_update_ignore_pref">Exclude modules</string>
    <string name="pref_category_updates">Updates</string>
    <string name="check_for_updates">Check for app updates</string>
    <string name="update_debug_download_pref">Test update download mechanism</string>
    <string name="notification_update_wifi_desc">Only check on WiFi</string>
    <string name="notification_update_wifi_pref">Require wi-fi or an unmetered network for update checks. Recommended to leave on if you have limited mobile data.</string>
    <string name="online">Online</string>
    <string name="notification_update_app_desc">Enable automatically checking for app updates. Updates will not download automatically.</string>
    <string name="notification_update_app_pref">Check for app updates</string>
    <string name="setup_app_analytics">Allow app analytics</string>
    <string name="clear_app_cache">Clear app cache</string>
    <string name="clear_app_cache_desc">This shouldn\'t be necessary normally but may help fix some issues.</string>
    <string name="pref_category_privacy">Privacy</string>
    <string name="crash_reporting_pii_desc">Allows sending additional information in crash reports, some of which may contain personally identifiable information such as IP address and device identifiers.</string>
    <string name="crash_reporting_pii">Send additional information</string>
    <string name="blur_desc">Creates a blur effect behind some dialogs and elements. Note that blur may not perform well on some devices and may not work for everyone.</string>
    <string name="analytics_desc">Allow us to track app usage and installs. Fully GDPR compliant and uses Countly, hosted by Androidacy.</string>
    <string name="debug_cat">Debugging</string>
    <string name="announcements">News and updates</string>
    <string name="back">Go back</string>
    <string name="donate_fox">Donate to Fox2Code</string>
    <string name="donate_androidacy">Donate to Androidacy</string>
    <string name="donate_androidacy_sum">Buy a premium subscription to Androidacy to support the app and the repo.</string>
    <string name="warning_pls_restart">Please note that some settings may not take effect until you restart the app.</string>
    <string name="notification_update_ignore_version_desc">Ignore specific versions when checking for module updates. Disabling update checks per-module above overrides this setting!</string>
    <string name="notification_update_ignore_version_pref">Exclude version(s) from update checks</string>
    <string name="expired">This build has expired!</string>
    <string name="expired_message">The build you are using is expired and will no longer run. Please update to the latest stable build.</string>
    <string name="download_latest">Download latest</string>
    <string name="credits">Credits</string>
    <string name="notification_update_frequency_pref">Background check frequency</string>
    <string name="notification_update_frequency_desc">How often to check for updates in the background. Setting too low a value could result in battery drain.</string>
    <string name="show_apps">Our other apps</string>
</resources>