<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_info">
        <!-- donate buttons for fox2code and androidacy -->
        <com.fox2code.mmm.settings.LongClickablePreference
            app:icon="@drawable/ic_baseline_monetization_on_24"
            app:key="pref_donate_fox"
            app:singleLineTitle="false"
            app:title="@string/donate_fox" />
        <com.fox2code.mmm.settings.LongClickablePreference
            app:icon="@drawable/ic_baseline_monetization_on_24"
            app:key="pref_donate_androidacy"
            app:singleLineTitle="false"
            app:summary="@string/donate_androidacy_sum"
            app:title="@string/donate_androidacy" />
        <com.fox2code.mmm.settings.LongClickablePreference
            app:icon="@drawable/ic_baseline_bug_report_24"
            app:key="pref_report_bug"
            app:singleLineTitle="false"
            app:title="@string/report_bugs" />
        <com.fox2code.mmm.settings.LongClickablePreference
            app:icon="@drawable/ic_github"
            app:key="pref_source_code"
            app:singleLineTitle="false"
            app:title="@string/source_code" />
        <com.fox2code.mmm.settings.LongClickablePreference
            app:icon="@drawable/ic_baseline_telegram_24"
            app:key="pref_support"
            app:singleLineTitle="false"
            app:title="@string/support" />
        <com.fox2code.mmm.settings.LongClickablePreference
            app:icon="@drawable/ic_baseline_telegram_24"
            app:key="pref_announcements"
            app:singleLineTitle="false"
            app:title="@string/announcements" />
    </PreferenceCategory>


</PreferenceScreen>