<!--
  ~ Copyright (c) 2023 to present Androidacy and contributors. Names, logos, icons, and the Androidacy name are all trademarks of Androidacy and may not be used without license. See LICENSE for more information.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:icon="@drawable/ic_baseline_warning_24"
        android:enabled="false"
        app:title="@string/warning_pls_restart" />

    <Preference
        android:fragment="com.fox2code.mmm.settings.RepoFragment"
        app:icon="@drawable/ic_baseline_extension_24"
        app:key="pref_manage_repos"
        app:singleLineTitle="false"
        app:title="@string/manage_repos_pref" />

    <!-- updates, appearance, security, privacy, info, debugging, credits, etc. -->

    <Preference
        android:fragment="com.fox2code.mmm.settings.UpdateFragment"
        app:icon="@drawable/ic_baseline_update_24"
        app:key="pref_updates_screen"
        app:singleLineTitle="false"
        app:title="@string/pref_category_updates" />

    <Preference
        android:fragment="com.fox2code.mmm.settings.AppearanceFragment"
        app:icon="@drawable/ic_baseline_palette_24"
        app:key="pref_appearance"
        app:singleLineTitle="false"
        app:title="@string/pref_category_appearance" />

    <Preference
        android:fragment="com.fox2code.mmm.settings.SecurityFragment"
        app:icon="@drawable/ic_baseline_security_24"
        app:key="pref_security"
        app:singleLineTitle="false"
        app:title="@string/pref_category_security" />

    <Preference
        android:fragment="com.fox2code.mmm.settings.PrivacyFragment"
        app:icon="@drawable/baseline_privacy_tip_24"
        app:key="pref_privacy"
        app:singleLineTitle="false"
        app:title="@string/pref_category_privacy" />


    <Preference
        android:fragment="com.fox2code.mmm.settings.DebugFragment"
        app:icon="@drawable/ic_baseline_bug_report_24"
        app:key="pref_debug"
        app:singleLineTitle="false"
        app:title="@string/debug_cat" />

    <Preference
        android:fragment="com.fox2code.mmm.settings.InfoFragment"
        app:icon="@drawable/ic_baseline_info_24"
        app:key="pref_info"
        app:singleLineTitle="false"
        app:title="@string/pref_category_info" />

    <Preference
        android:fragment="com.fox2code.mmm.settings.CreditsFragment"
        app:icon="@drawable/baseline_people_24"
        app:key="pref_credits"
        app:singleLineTitle="false"
        app:title="@string/credits" />


    <Preference
        app:icon="@drawable/ic_baseline_list_24"
        app:key="pref_show_licenses"
        app:singleLineTitle="false"
        app:title="@string/show_licenses" />

    <Preference
        app:icon="@drawable/ic_baseline_list_24"
        app:key="pref_show_apps"
        app:singleLineTitle="false"
        app:title="@string/show_apps" />

    <Preference
        app:enabled="true"
        app:iconSpaceReserved="false"
        app:key="pref_pkg_info"
        app:singleLineTitle="false"
        app:summary="@string/loading" />

</PreferenceScreen>
