<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 to present Androidacy and contributors. Names, logos, icons, and the Androidacy name are all trademarks of Androidacy and may not be used without license. See LICENSE for more information.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/back_installer"
        android:icon="@drawable/baseline_arrow_back_24"
        android:title="@string/back"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/install_terminal_reboot_fab"
        android:icon="@drawable/ic_reboot_24"
        android:title="@string/install_terminal_reboot_now"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/install_terminal_config"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/config"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>